--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proxy_site",
   "version": "1.0.0",
   "main": "index.js",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -11,8 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@titaniumnetwork-dev/ultraviolet": "^3.2.10",
-    "@tomphttp/bare-server-node": "^2.0.5",
+    "@tomphttp/bare-server-node": "2.0.3",
     "express": "^4.21.1"
   }
 }
